syntax = "proto3";

package greet;

option go_package = "go_code/gRPCudemy/greet/proto";

message GreetRequest {
    string first_name = 1;
}

//Field numbers must be positive integers.
message SumRequest {
    int64 first_num = 1;
    int64 sec_num = 2;
}

//define message for Primes API
message PrimesRequest{
    int64 PrimesNum = 1;
}

message AvgRequest{
    float AvgRequestNum = 1;
}

message GreetResponse{
    string result = 1;
}

message SumResponse{
    int64 result = 1;
}

message PrimesResponse{
    int64 result = 1;
} 

message AvgResponse{
    float result = 1;
}




service GreetService{
    //Unary
    rpc Greet(GreetRequest) returns(GreetResponse);
    rpc Sum(SumRequest) returns(SumResponse);
    //Server Streaming
    //we can have one or more responses from this RPC endpoint
    rpc GreetManyTimes(GreetRequest) returns(stream GreetResponse);
    rpc PrimesApi(PrimesRequest) returns(stream PrimesResponse);
    //Client Streaming
    rpc LongGreet(stream GreetRequest) returns(GreetResponse);
    rpc AvgApi(stream AvgRequest) returns(AvgResponse);
    //Bi-Directional Streaming
    rpc GreetEveryone(stream GreetRequest) returns(stream GreetResponse);
}

// service SumService{
//     rpc Sum(SumRequest) returns(SumResponse);
// }